--- a/presentation.qmd
+++ b/presentation.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Project title"
+title: "Taylor Swift (Soon-to-be-Kelce)"
 subtitle: "STA/ISS 313 - Spring 2024 - Project 1"
 author: "Team Robots 🤖"
 title-slide-attributes:
@@ -45,9 +45,9 @@ knitr::opts_chunk$set(
 # Load your data here
 ```
 
-# Using Quarto for presentations
+# Q1: How do Taylor Swift's single releases differ from the songs on the full albums? 
 
-## Quarto
+## Plot 1
 
 -   The presentation is created using the Quarto CLI
 
@@ -158,26 +158,6 @@ If you want to generate a table, make sure it is in the HTML format (instead of 
 
 gt(head(penguins))
 ```
-
-## Images
-
-![Image credit: Danielle Navarro, Percolate.](images/watercolour_sys02_img34_teacup-ocean.png)
-
-## Math Expressions {.smaller}
-
-You can write LaTeX math expressions inside a pair of dollar signs, e.g. \$\alpha+\beta\$ renders $\alpha+\beta$. You can use the display style with double dollar signs:
-
-```         
-$$\bar{X}=\frac{1}{n}\sum_{i=1}^nX_i$$
-```
-
-$$\bar{X}=\frac{1}{n}\sum_{i=1}^nX_i$$
-
-Limitations:
-
-1.  The source code of a LaTeX math expression must be in one line, unless it is inside a pair of double dollar signs, in which case the starting `$$` must appear in the very beginning of a line, followed immediately by a non-space character, and the ending `$$` must be at the end of a line, led by a non-space character;
-
-2.  There should not be spaces after the opening `$` or before the closing `$`.
 
 # Wrap up
 
