--- a/plot1.qmd
+++ b/plot1.qmd
@@ -22,8 +22,6 @@ taylor_album_songs <- readr::read_csv('data/taylor_album_songs.csv', show_col_ty
 taylor_all_songs <- readr::read_csv('data/taylor_all_songs.csv', show_col_types = FALSE)
 taylor_albums <- readr::read_csv('data/taylor_albums.csv', show_col_types = FALSE)
 
-taylor_streams <- readr::read_csv('data/Taylor_Swift_streams.csv', show_col_types = FALSE)
-taylor_streams
 ```
 
 ```{r}
@@ -34,7 +32,6 @@ taylor_all_songs <- taylor_all_songs |>
   drop_na(album_name) |>
   mutate(is_single = !(is.na(single_release)))
 
-print(taylor_all_songs)
 
 taylor_albums_energy <- taylor_all_songs |>
   drop_na(energy) |>
@@ -46,11 +43,11 @@ taylor_singles_energy <- taylor_all_songs %>%
   group_by(album_name) %>%
   summarise(singles_energy = mean(energy))
 
-print(taylor_singles_energy)
 
-taylor_albums_data <- merge(taylor_albums_energy, taylor_singles_energy)
+plot1a_data <- merge(taylor_albums_energy, taylor_singles_energy)
 
-taylor_albums_data <- taylor_albums_data |>
+
+plot1a_data <- plot1a_data |>
   pivot_longer(
     cols = c("album_energy", "singles_energy"),
     names_to = "song_type",
@@ -60,8 +57,6 @@ taylor_albums_data <- taylor_albums_data |>
     song_type = fct_recode(song_type, "Album" = "album_energy", "Single" = "singles_energy")
   )
 
-taylor_albums_data
-
 
 
 ```
@@ -70,29 +65,16 @@ taylor_albums_data
 #| label: create-plot1
 #| message: false
 
-# ggplot(taylor_albums_data, aes(x = album_name, y = singles_energy, fill = album_name)) +
-#   geom_bar(stat = "identity") +
-#   scale_fill_manual(values = c("#7B96AF", "#ACA38D", "#BD9365", "#5F4A30", 
-#                                "#4D4D4D", "#DEA9C9", "#A26A5B", "#982F47", 
-#                                "#0A0A0A", "#704073", "#4497BA")) +
-#   #scale_y_continuous(breaks = seq(0, 1.0, 5), labels = seq(0, 1.0, 5)) + 
-#   theme_bw() +
-#   theme(axis.text.x = element_blank()) +
-#   labs(title = "Taylor Swift Song Energy of Albums",
-#        subtitle = "",
-#        x = "Albums",
-#        y = "Energy",
-#        fill = "Album",
-#        caption = "Source: Tidy Tuesday")
 
-taylor_albums_data <- taylor_albums_data |>
+
+plot1a_data <- plot1a_data |>
   mutate(album_name = factor(album_name, levels = c("Taylor Swift", "Fearless",  "Fearless (Taylor's Version)",
                                                     "Speak Now", "Red", "1989", "reputation",
                                                     "Lover", "folklore", "evermore", "Midnights")))
 
 
 
-ggplot(taylor_albums_data, aes(x = album_name, y = energy, fill = album_name)) +
+ggplot(plot1a_data, aes(x = album_name, y = energy, fill = album_name)) +
   geom_col(position = "dodge") +
   geom_text(aes(label = round(energy, 2)), position = position_dodge(width = 0.9), vjust = -0.5, size = 2) +
   facet_wrap(~song_type) +
@@ -118,22 +100,18 @@ ggplot(taylor_albums_data, aes(x = album_name, y = energy, fill = album_name)) +
 #| label: create-plot2
 #| message: false
 
-taylor_songs_tempo <- taylor_all_songs |>
+plot1b_data <- taylor_all_songs |>
   drop_na(tempo)
-  
-#print(taylor_songs_tempo)
-#print(sum(taylor_songs_tempo$is_single == TRUE))
-#print(sum(taylor_songs_tempo$is_single == FALSE))
 
 
-ggplot(taylor_songs_tempo, aes(x = tempo, y = is_single, fill = is_single)) +
+ggplot(plot1b_data, aes(x = tempo, y = is_single, fill = is_single)) +
   geom_density_ridges(show.legend = FALSE) +
   scale_fill_manual(values = c("#4D4D4D", "#DEA9C9")) +
   scale_y_discrete(labels = c("Album", "Single")) +
   theme_bw() +
   labs(
     title = "Tempo Distribution of Taylor Swift Songs",
-    subtitle = "191 Album only songs versus 47 single releases",
+    subtitle = "191 songs appearing only on an album versus 47 single releases",
     x = "Tempo",
     y = "Release Type",
     caption = "Source: Tidy Tuesday Data"
