All the base changes for the presentation. added alt text to the write up

--- a/index.qmd
+++ b/index.qmd
@@ -246,6 +246,7 @@ ggplot(plot2a_data, aes(x = album_release)) +
     x = "Album Release Date",
     caption = "Source: Tidy Tuesday Data"
   ) +
+  theme_bw() +
   theme(
     axis.title.y = element_blank(),
     panel.grid.minor = element_blank(),
