--- a/plot 2.qmd
+++ b/plot 2.qmd
@@ -58,6 +58,17 @@ plot2a_data <- plot2a_data |>
 ```{r fig.height = 8, fig.width = 11}
 #| label: plot2a_valence_energy_change_over_time
 
+#| fig-alt: |
+#|   This figure is a point and line plot titled "Taylor Swift album attributes over time"
+#|   that displays the average energy and valence values of each Taylor swift album along 
+#|   the date at which the album was released. Each album is represented by a point, 
+#|   colored to match the album cover, and labeled witht eh album name. Also, each point
+#|   is connected by a line to show the change from one album to the next in terms of 
+#|   energy/valence respectively. Under each set of albums is a dotted red line that displays
+#|   the average change over time among each of these values. The red dotted line along
+#|   with the rest of the plot show that there is a slight decrease, but seemingly insignificant,
+#|   decrease in both energy and valence scores of her albums over time.
+
 ggplot(plot2a_data, aes(x = album_release)) +
   geom_line(aes(y = attribute_value), color = "#4D4D4D", size = 2) +
   geom_point(aes(y = attribute_value, color = album_name), size = 7, shape = 18) +
@@ -91,7 +102,6 @@ ggplot(plot2a_data, aes(x = album_release)) +
 
 ```
 
-
 ```{r}
 #| label: data-wrangle-plot2b
 
@@ -122,6 +132,15 @@ plot2b_data <- plot2b_data |>
 
 ```{r}
 #| label: plot2b-plotting
+
+#| fig-alt: |
+#|   This figure is a bar plot titled "Original versus Taylor's Score Comparison"
+#|   that displays 8 total bars, each representing a different score value. On the 
+#|   left side of the plot, it dsiplays the user and metacritic score for both the 
+#|   original version of Fearless and the "Taylor's Version" of Fearless. On the right,
+#|   the same but this time for the two versions of the album Red. On top
+#|   of each bar is the score for the plots. The plot shows that all of the Taylor's Version
+#|   score higher than the original version for both metacritic and user scores.
 
 ggplot(plot2b_data, aes(x= score_type, y = score, fill = taylor_owned)) + 
   geom_col(position = "dodge") + 
